--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,8 @@
         "mews/purifier": "~2.0",
         "overtrue/laravel-lang": "~3.0",
         "overtrue/pinyin": "~3.0",
-        "predis/predis": "~1.0"
+        "predis/predis": "~1.0",
+        "spatie/laravel-pjax": "^1.3"
     },
     "require-dev": {
         "barryvdh/laravel-debugbar": "~3.1",
