前台模块开发完成

--- a/.env.example
+++ b/.env.example
@@ -33,8 +33,8 @@ PUSHER_APP_ID=
 PUSHER_APP_KEY=
 PUSHER_APP_SECRET=
 
-GEETEST_ID=c2b6879ccb177c6e05001bfd4280a016
-GEETEST_KEY=b47b00ce150e58b25c0bade6d0935142
+GEETEST_ID=
+GEETEST_KEY=
 
-BAIDU_TRANSLATE_APPID=20161221000034398
-BAIDU_TRANSLATE_KEY=xovnJgISBa_8lCe2P6DP
+BAIDU_TRANSLATE_APPID=
+BAIDU_TRANSLATE_KEY=
